Add validations, exceptions and DTO/pet changes
Introduce validation logic and custom exceptions, adjust models and repository API. ServiceCLI: add regex-based checks for name, weight, age and breed and throw new exceptions; import exceptions and update cadastrarNovoPet validation flow.
 Add new exception classes (IdadeException, NameAndLastNameInvalidFormat, NameOrLastNameSpecialCharException, RacaInvalidaException) and remove NameOrLastNameNullException. InterfaceCLI: refactor cadastro flow (use local PetDTO instances), add cadastrar2 (verbose validation flow), update form parsing and call cadastrar2 from the menu; minor input handling fixes. RepositoryInterface: rename parameter and add buscarPetPorId signature. RepositoryMemoryCLI: assign incremental id on save, return unmodifiable pet list and add buscarPetPorId stub. Models: change peso from double to String in Pet and PetDTO, add id and standard getters/setters in Pet. Overall adjustments align DTO/model types with string-based input and add server-side validation.